Fix game canvas having scroll bars
Due to the size of the main menu buttons being too big as their height
was using vh units.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .menu {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: none;
     text-align: center;
 }
@@ -15,7 +15,7 @@ canvas {
 
 .left-side, .right-side {
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 50%;
 }
 
@@ -36,8 +36,7 @@ h1, h2 {
 }
 
 .btn {
-    font-size: 1.5rem;
-    height: 10vw;
+    font-size: 4rem;
     background-color: #008080;
     color: white;
 }
@@ -45,12 +44,11 @@ h1, h2 {
 .btn--menu {
     display: block;
     width: 40%;
-    margin: 1vh auto;
+    margin: 1% auto;
 }
 
 .btn--play {
-    height: 15vw;
-    font-size: 2.5rem;
+    font-size: 8rem;
     width: 40%;
     margin: 1vw auto;
 }
